---
source: src/snapshot_tests.rs
expression: "String::from_utf8(output).unwrap()"
input_file: src/snapshot_tests/reporting/multiple_errors.toy
---
Error: Unexpected token Semicolon, expected one of "identifier", "int", "("
   ╭─[myscript.toy:1:1]
   │
 1 │ var x = ;
   │        ┬  
   │        ╰── Unexpected token Semicolon
───╯
Error: number too large to fit in target type
   ╭─[myscript.toy:1:1]
   │
 3 │ var y = 23842342472947239472349;
   │         ───────────┬───────────  
   │                    ╰───────────── Invalid integer
   │ 
   │ Note: Larger than maximum positive number which is 9223372036854775807
───╯
